--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 /* Estilos globales para todo el proyecto */
 * {
@@ -11,6 +12,7 @@
 
 body {
   font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
   display: flex;
   justify-content: center;
